<resources>
    <string name="app_name">GOTIT</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="accueil">Accueil</string>
    <string name="carte">Carte</string>
    <string name="poissons">Poissons</string>
    <string name="profil">Profil</string>
    <string name="mon_compte">Mon compte</string>
    <string name="se_connecter">Se connecter</string>
    <string name="propos_de_nous">À propos de nous</string>
    <string name="MAPS_API_KEY">AIzaSyBj8x1cmI_4VgbirVlCT1yO5ImW1Y-LQOk</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_connect">ConnectActivity</string>
</resources>